[package]
name = "helper-cli"
version = "0.1.0"
authors = ["harshulgupta05 <65627692+harshulgupta05@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal-menu = "1.9.7"
dialoguer = "0.8.0"
crossterm = "0.19.0"
chrono-english = "0.1.6"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
savefile = "0.7.4"
savefile-derive="0.7"